<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".ui.characterDetail.DetailFragment">

    <androidx.cardview.widget.CardView
        android:id="@+id/imageView_Card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:cardCornerRadius="15dp"
        app:cardElevation="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView_Photo"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:scaleType="centerCrop"
            app:layout_constraintDimensionRatio="1:1"/>

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/tv_Name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:textColor="@color/text_secondary"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageView_Card"
        tools:text="@string/character_name" />

    <TextView
        android:id="@+id/tv_Label_Status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:textColor="@color/text_secondary"
        android:textSize="16sp"
        android:text="@string/charcater_status"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_Name"/>

    <TextView
        android:id="@+id/tv_Status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="8dp"
        android:textColor="@color/text_secondary"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@id/tv_Label_Status"
        app:layout_constraintTop_toBottomOf="@id/tv_Name"
        tools:text="@string/charcater_status" />

    <TextView
        android:id="@+id/tv_Label_Gender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:textColor="@color/text_secondary"
        android:textSize="16sp"
        android:text="Gender:"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_Label_Status"/>

    <TextView
        android:id="@+id/tv_Gender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="8dp"
        android:textColor="@color/text_secondary"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@id/tv_Label_Gender"
        app:layout_constraintTop_toBottomOf="@id/tv_Status"
        tools:text="@string/charcater_gender" />

    <TextView
        android:id="@+id/tv_Label_Origin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginStart="24dp"
        android:textColor="@color/text_secondary"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_Label_Gender"
        android:text="@string/character_origin" />

    <TextView
        android:id="@+id/tv_Origin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="8dp"
        android:textColor="@color/text_secondary"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@id/tv_Label_Origin"
        app:layout_constraintTop_toBottomOf="@id/tv_Gender"
        tools:text="@string/character_origin" />

    <TextView
        android:id="@+id/tv_Label_Species"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginStart="24dp"
        android:textColor="@color/text_secondary"
        android:textSize="14sp"
        android:textStyle="bold"
        android:text="@string/charcater_species"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_Label_Origin"/>

    <TextView
        android:id="@+id/tv_Species"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="8dp"
        android:textColor="@color/green"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@+id/tv_Label_Origin"
        app:layout_constraintStart_toEndOf="@id/tv_Label_Species"
        tools:text="@string/charcater_species" />

</androidx.constraintlayout.widget.ConstraintLayout>